# reto_502_api

./: README.md  requirements.txt
app/: api.py  dependencies.py  model.py
model/: data.csv  data_wrangling_model.ipynb  my_time_series_prediction.ipynb  revenuedata.csv
notes_pipeline/: pipeline.py  pipeline_draft.ipynb  pipeline_final_draft.ipynb  ts-forecasting-pipeline
pipeline/: README.md  pipeline.py  pyproject.toml
pipeline/conf/: logging.yml
pipeline/src/pipeline/: __init__.py  __main__.py
streamlit/: data.json  web_app.py
ts-forecasting-pipeline/: README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
ts-forecasting-pipeline/conf/: logging.yml
ts-forecasting-pipeline/conf/base/: catalog.yml
ts-forecasting-pipeline/data/01_raw/: dataquery.csv
ts-forecasting-pipeline/src/ts_forecasting_pipeline/: __init__.py  __main__.py
ts-forecasting-pipeline/src/ts_forecasting_pipeline/pipelines/preprocessing_data/: nodes.py  pipeline.py
